--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 html, body {
     height: 100%;
     background-image: linear-gradient(45deg, darkgray, lightgray);
+    text-align: center;
+    font-size: x-large;
+    
 }
